<resources>
    <string name="app_name">EasyTicket2</string>
    <string name="general">General</string>
    <string name="periodo">Período</string>
    <string name="imagen_a_texto">Imagen a texto</string>
    <string name="configuracion">Configuración</string>
    <string name="escanear">Escanear</string>
    <string name="ayuda_y_opini_n">Ayuda y opinión</string>
    <string name="crear_cuentaa">Crear cuenta</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y condiciones</string>
    <string name="monica">Monica</string>
    <string name="monica_rt_outlook_com">monica_rt@outlook.com</string>
    <string name="cambiar_cuenta">Cambiar cuenta</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="cerrar_seci_n">Cerrar sesion</string>
    <string name="todo">toodo</string>
    <string name="unete_al_cambio">UNETE AL CAMBIO</string>
    <string name="con_easy_ticket_podr_s_tener_un_mejor_control_de_tus_finanzas_capturar_cada_ticket_al_momento_de_realizar_una_compra_comparar_precios_y_ahorrar">Con Easy Ticket podrás tener un mejor control de tus finanzas, capturar cada ticket al momento de realizar una compra, comparar precios y ahorrar.</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="mi_presupuesto">Mi presupuesto</string>
    <string name="mis_gastos">Mis gastos</string>
    <string name="comparaci_n_de_ticket">Comparación de ticket</string>
    <string name="mes_julio_pdf">Mes_julio.pdf</string>
    <string name="reporte_mensual">Reporte mensual</string>
    <string name="mes_junio_pdf">Mes_junio.pdf</string>
    <string name="mis_tickets">Mis tickets</string>
    <string name="guardar">Guardar</string>
    <string name="ingresa_tu_presupuesto">Ingresa tu presupuesto</string>
    <string name="mensualmente">Mensualmente</string>
    <string name="quincenalmente">Quincenalmente</string>
    <string name="semanalmente">Semanalmente</string>
    <string name="per_odo">Período:</string>
    <string name="mis_gastos1">Mis gastos</string>
    <string name="mi_presupuesto1">Mi presupuesto</string>
    <string name="mis_tickets1">Mis tickets</string>
    <string name="hace_2_dias">HACE 2 DÍAS</string>
    <string name="_390_51">$390.51</string>
    <string name="todo9">TODO</string>
    <string name="hace_15_dias">HACE 15 DÍAS</string>
    <string name="_536_19">$536.19</string>
    <string name="toddo">TODO</string>
    <string name="hace_2_meses">HACE 2 MESES</string>
    <string name="_835_69">$835.69</string>
    <string name="toodo">TODO</string>
    <string name="hace_3_meses">HACE 3 MESES</string>
    <string name="_53619">$536.19</string>
    <string name="todooo">TODO</string>
    <string name="_795_82">$795.82</string>
    <string name="hace_3_mesees">HACE 3 MESES</string>
    <string name="pay_de_queso_chic_1_0x_14_89">PAY DE QUESO CHIC 1.0x $14.89</string>
    <string name="queso_temazcal_0_29x_30_64">QUESO TEMAZCAL 0.29x $30.64</string>
    <string name="tomatillo_kg_0_28x_4_93">TOMATILLO KG 0.28x $4.93</string>
    <string name="jicama_kg_0_70x_8_81">JICAMA KG 0.70x $8.81</string>
    <string name="alas_picositas_bac_0_28x_86_42">ALAS PICOSITAS BAC 0.28x $86.42</string>
    <string name="linea">--------------------------------------------------------------</string>
    <string name="salchicha_salch_0_50x_14_90">SALCHICHA SALCH 0.50x $14.90</string>
    <string name="milanesa_de_puerco_0_46x_42_46">MILANESA DE PUERCO 0.46x $42.46</string>
    <string name="pasta_dental_colg_1_0x_10_46">PASTA DENTAL COLG 1.0x $10.46</string>
    <string name="chile_en_polvo_1_0x_10_46">CHILE EN POLVO 1.0x $10.46</string>
    <string name="total_de_su_compra_390_51">TOTAL DE SU COMPRA $390.51</string>
    <string name="chicharron_pella_0_17x_26_44">CHICHARRON PELLA 0.17x $26.44</string>
    <string name="melon_kg_1_39x_11_70">MELON KG 1.39x $11.70</string>
    <string name="insecticida_oko_ca_1_0x_54_53">INSECTICIDA OKO CA 1.0x $54.53</string>
    <string name="textview">TextView</string>
    <string name="id">ID</string>
    <string name="nombre_tienda">Nombre Tienda</string>
    <string name="fecha">Fecha:</string>
    <string name="_10_agosto_2021">10-Agosto-2021</string>
    <string name="_9_34">9:34</string>
    <string name="registro_de_ticket">Registro de Ticket</string>
    <string name="agregar_ticket">Agregar Ticket</string>
</resources>